[package]
name = "phonon_garden"
version = "0.1.0"
edition = "2021"

[dependencies]
kdtree = "0.7.0"
macroquad = "0.4.14"
ndarray = { version = "0.16.1", features = ["rayon"] }
rand = "0.9.2"
rayon = "1.10.0"
sprs = { version = "0.11.1", features = ["serde"] }

[profile.release]
# Aggressive optimization settings for maximum performance
opt-level = 3           # Maximum optimization level
lto = "fat"             # Full link-time optimization
codegen-units = 1       # Single codegen unit for better optimization
panic = "abort"         # Abort on panic (smaller binary, faster)
strip = true            # Strip symbols for smaller binary
overflow-checks = false # Disable overflow checks in release mode
